--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -23,7 +23,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'filePath'
-      filePath: /eng/scripts/run_tests.ps1
+      filePath: ./eng/scripts/run_tests.ps1
       workingDirectory: '${{parameters.GoWorkspace}}'
       arguments: '${{parameters.ServiceDirectory}}'
       displayName: 'Run Tests and Create Coverage'
