--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -40,27 +40,9 @@ steps:
     env:
       GO111MODULE: 'on'
 
-  - pwsh: |
-      docker run `
-      --detach `
-      -v $(Build.SourcesDirectory):/etc/testproxy `
-      -p 5001:5001 `
-      -p 5000:5000 `
-      azsdkengsys.azurecr.io/engsys/testproxy-lin:latest
-    displayName: 'Run the docker container'
-    condition: and(succeeded(), ne($(Agent.OS),'Windows_NT')
-
-  - pwsh: |
-      docker run `
-      --detach `
-      -v $(Build.SourcesDirectory):/etc/testproxy `
-      -p 5001:5001 `
-      -p 5000:5000 `
-      azsdkengsys.azurecr.io/engsys/testproxy-win:latest
-    displayName: 'Run the docker container'
-    condition: and(succeeded(), eq($(Agent.OS),'Windows_NT')
-
-
+  - template: configure-proxy.yml
+    parameters:
+      ServiceDirectory: ${{ parameters.ServiceDirectory }}
 
   - pwsh: |
       $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir $(SCOPE))
