redirect the output to stderr in gofmt checking so that we can give errors when the code is not formatted

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -39,7 +39,7 @@ steps:
 
   - pwsh: |
       Write-Host "##[command]Check source file formatting in $(pwd)"
-      gofmt -s -l -d .
+      gofmt -s -l -d . >&2
     displayName: 'Format Check'
     condition: succeededOrFailed()
     failOnStderr: true
