tier 0 of trust. I don't expect this to work, but it's still worth a shot. maybe the devops agents do something differently

--- a/eng/pipelines/templates/steps/configure-proxy.yml
+++ b/eng/pipelines/templates/steps/configure-proxy.yml
@@ -1,9 +1,18 @@
 parameters:
   ServiceDirectory: ''
 
+variables:
+    CertificateUri: 'https://github.com/Azure/azure-sdk-tools/raw/main/tools/test-proxy/docker/dev_certificate/dotnet-devcert.pfx'
+    CertificateLocation: '$(Build.SourcesDirectory)/dotnet-devcert.pfx'
+
 steps:
   - pwsh: |
+        Invoke-WebRequest `
+            -Uri $(CertificateUri) `
+            -OutFile $(CertificateLocation) -UseBasicParsing
 
+        dotnet dev-certs https --clean --import $(CertificateLocation) -p "password"
+        dotnet dev-certs https --trust
     displayName: 'Download and Trust Certificate'
     
   - pwsh: |
