--- a/eng/pipelines/templates/steps/configure-proxy.yml
+++ b/eng/pipelines/templates/steps/configure-proxy.yml
@@ -23,7 +23,9 @@ steps:
       -p 5000:5000 `
       azsdkengsys.azurecr.io/engsys/testproxy-lin:latest
     displayName: 'Run the docker container'
-    condition: and(succeeded(), ne($(Agent.OS),'Windows_NT'))
+    condition: and(succeeded(), ne(variables['Agent.OS'],'Windows_NT'))
+
+
 
   - pwsh: |
       docker run `
@@ -33,6 +35,6 @@ steps:
       -p 5000:5000 `
       azsdkengsys.azurecr.io/engsys/testproxy-win:latest
     displayName: 'Run the docker container'
-    condition: and(succeeded(), eq($(Agent.OS),'Windows_NT'))
+    condition: and(succeeded(), eq(variables['Agent.OS'],'Windows_NT'))
     
 
