--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -39,7 +39,7 @@ steps:
 
   - pwsh: |
       Write-Host "##[command]Check source file formatting in $(pwd)"
-      gofmt -s -l -d . >&2
+      gofmt -s -l -d . | tee >&2
     displayName: 'Format Check'
     condition: succeededOrFailed()
     failOnStderr: true
