switch to script as PS doesn't like redirecting to stderr

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -37,8 +37,8 @@ steps:
     failOnStderr: true
     workingDirectory: 'sdk/${{parameters.ServiceDirectory}}'
 
-  - pwsh: |
-      Write-Host "##[command]Check source file formatting in $(pwd)"
+  - script: |
+      echo Check source file formatting in $(pwd)
       gofmt -s -l -d . | tee >&2
     displayName: 'Format Check'
     condition: succeededOrFailed()
