--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -28,17 +28,17 @@ steps:
     env:
       GO111MODULE: 'on'
 
-  - pwsh: |
-      $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(SCOPE))
-      foreach ($md in $modDirs) {
-        pushd $md
-        Write-Host "##[command]Executing go vet ./... in $md"
-        go vet ./...
-      }
-    displayName: 'Vet'
-    workingDirectory: '${{parameters.GoWorkspace}}'
-    env:
-      GO111MODULE: 'on'
+  # - pwsh: |
+  #     $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(SCOPE))
+  #     foreach ($md in $modDirs) {
+  #       pushd $md
+  #       Write-Host "##[command]Executing go vet ./... in $md"
+  #       go vet ./...
+  #     }
+  #   displayName: 'Vet'
+  #   workingDirectory: '${{parameters.GoWorkspace}}'
+  #   env:
+  #     GO111MODULE: 'on'
 
   - template: configure-proxy.yml
     parameters:
