--- a/sdk/storage/azblob/recordings/Test/TestSetBlobTagsWithVID.yaml
+++ b/sdk/storage/azblob/recordings/Test/TestSetBlobTagsWithVID.yaml
@@ -13,7 +13,7 @@ interactions:
       - azsdk-go-generated/<version> azsdk-go-generated/<version> azcore/v0.16.2 (go1.15;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:57:59 GMT
       X-Ms-Version:
       - "2019-12-12"
     url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid?restype=container
@@ -24,15 +24,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Etag:
-      - '"0x8D95B05C692295C"'
+      - '"0x8D95BC3CF3174AA"'
       Last-Modified:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 24113293-a01e-0029-14ee-8c40e3000000
+      - 96237584-801e-0035-6fac-8d98f4000000
       X-Ms-Version:
       - "2019-12-12"
     status: 201 Created
@@ -56,7 +56,7 @@ interactions:
       X-Ms-Blob-Type:
       - BlockBlob
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       X-Ms-Version:
       - "2019-12-12"
     url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid
@@ -69,23 +69,23 @@ interactions:
       Content-Md5:
       - jXd/OF09/siBXSD3SWAm3A==
       Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Etag:
-      - '"0x8D95B05C6B723D9"'
+      - '"0x8D95BC3CF60448A"'
       Last-Modified:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Content-Crc64:
       - gCf8jkNhru0=
       X-Ms-Request-Id:
-      - 241132e3-a01e-0029-5bee-8c40e3000000
+      - 96237660-801e-0035-32ac-8d98f4000000
       X-Ms-Request-Server-Encrypted:
       - "true"
       X-Ms-Version:
       - "2019-12-12"
       X-Ms-Version-Id:
-      - "2021-08-09T07:17:41.6490969Z"
+      - "2021-08-10T05:58:00.5578890Z"
     status: 201 Created
     code: 201
     duration: ""
@@ -107,7 +107,7 @@ interactions:
       X-Ms-Blob-Type:
       - BlockBlob
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       X-Ms-Version:
       - "2019-12-12"
     url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid
@@ -120,28 +120,28 @@ interactions:
       Content-Md5:
       - DA0BhBOXuQxG/UH7nkzI8g==
       Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Etag:
-      - '"0x8D95B05C6DC18D6"'
+      - '"0x8D95BC3CF8F4DC8"'
       Last-Modified:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:00 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Content-Crc64:
       - JU9o4Uwyoy4=
       X-Ms-Request-Id:
-      - 24113332-a01e-0029-25ee-8c40e3000000
+      - 962376d6-801e-0035-1aac-8d98f4000000
       X-Ms-Request-Server-Encrypted:
       - "true"
       X-Ms-Version:
       - "2019-12-12"
       X-Ms-Version-Id:
-      - "2021-08-09T07:17:41.8922982Z"
+      - "2021-08-10T05:58:00.8671448Z"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: <Tags><TagSet><Tag><Key>Python</Key><Value>CSharp</Value></Tag><Tag><Key>Javascript</Key><Value>Android</Value></Tag><Tag><Key>Go</Key><Value>CPlusPlus</Value></Tag></TagSet></Tags>
+    body: <Tags><TagSet><Tag><Key>Go</Key><Value>CPlusPlus</Value></Tag><Tag><Key>Python</Key><Value>CSharp</Value></Tag><Tag><Key>Javascript</Key><Value>Android</Value></Tag></TagSet></Tags>
     form: {}
     headers:
       Accept:
@@ -156,20 +156,20 @@ interactions:
       - azsdk-go-generated/<version> azsdk-go-generated/<version> azcore/v0.16.2 (go1.15;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       X-Ms-Version:
       - "2019-12-12"
-    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-09T07%3A17%3A41.6490969Z
+    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-10T05%3A58%3A00.5578890Z
     method: PUT
   response:
     body: ""
     headers:
       Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 24113386-a01e-0029-69ee-8c40e3000000
+      - 96237767-801e-0035-0fac-8d98f4000000
       X-Ms-Version:
       - "2019-12-12"
     status: 204 No Content
@@ -187,10 +187,10 @@ interactions:
       - azsdk-go-generated/<version> azsdk-go-generated/<version> azcore/v0.16.2 (go1.15;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:02 GMT
       X-Ms-Version:
       - "2019-12-12"
-    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-09T07%3A17%3A41.6490969Z
+    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-10T05%3A58%3A00.5578890Z
     method: GET
   response:
     body: "\uFEFF\x3C\x3F\x78\x6D\x6C\x20\x76\x65\x72\x73\x69\x6F\x6E\x3D\"\x31\x2E\x30\"\x20\x65\x6E\x63\x6F\x64\x69\x6E\x67\x3D\"\x75\x74\x66\x2D\x38\"\x3F\x3E\n\x3C\x54\x61\x67\x73\x3E\x3C\x54\x61\x67\x53\x65\x74\x3E\x3C\x54\x61\x67\x3E\x3C\x4B\x65\x79\x3E\x47\x6F\x3C\x2F\x4B\x65\x79\x3E\x3C\x56\x61\x6C\x75\x65\x3E\x43\x50\x6C\x75\x73\x50\x6C\x75\x73\x3C\x2F\x56\x61\x6C\x75\x65\x3E\x3C\x2F\x54\x61\x67\x3E\x3C\x54\x61\x67\x3E\x3C\x4B\x65\x79\x3E\x4A\x61\x76\x61\x73\x63\x72\x69\x70\x74\x3C\x2F\x4B\x65\x79\x3E\x3C\x56\x61\x6C\x75\x65\x3E\x41\x6E\x64\x72\x6F\x69\x64\x3C\x2F\x56\x61\x6C\x75\x65\x3E\x3C\x2F\x54\x61\x67\x3E\x3C\x54\x61\x67\x3E\x3C\x4B\x65\x79\x3E\x50\x79\x74\x68\x6F\x6E\x3C\x2F\x4B\x65\x79\x3E\x3C\x56\x61\x6C\x75\x65\x3E\x43\x53\x68\x61\x72\x70\x3C\x2F\x56\x61\x6C\x75\x65\x3E\x3C\x2F\x54\x61\x67\x3E\x3C\x2F\x54\x61\x67\x53\x65\x74\x3E\x3C\x2F\x54\x61\x67\x73\x3E"
@@ -200,11 +200,11 @@ interactions:
       Content-Type:
       - application/xml
       Date:
-      - Mon, 09 Aug 2021 07:17:41 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 241133fb-a01e-0029-4cee-8c40e3000000
+      - 962377d1-801e-0035-6cac-8d98f4000000
       X-Ms-Version:
       - "2019-12-12"
     status: 200 OK
@@ -222,10 +222,10 @@ interactions:
       - azsdk-go-generated/<version> azsdk-go-generated/<version> azcore/v0.16.2 (go1.15;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:43 GMT
+      - Tue, 10 Aug 2021 05:58:02 GMT
       X-Ms-Version:
       - "2019-12-12"
-    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-09T07%3A17%3A41.8922982Z
+    url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid/gotestblobsetblobtagswithvid?comp=tags&versionid=2021-08-10T05%3A58%3A00.8671448Z
     method: GET
   response:
     body: "\uFEFF\x3C\x3F\x78\x6D\x6C\x20\x76\x65\x72\x73\x69\x6F\x6E\x3D\"\x31\x2E\x30\"\x20\x65\x6E\x63\x6F\x64\x69\x6E\x67\x3D\"\x75\x74\x66\x2D\x38\"\x3F\x3E\n\x3C\x54\x61\x67\x73\x3E\x3C\x54\x61\x67\x53\x65\x74\x2F\x3E\x3C\x2F\x54\x61\x67\x73\x3E"
@@ -235,11 +235,11 @@ interactions:
       Content-Type:
       - application/xml
       Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 2411343a-a01e-0029-06ee-8c40e3000000
+      - 96237847-801e-0035-52ac-8d98f4000000
       X-Ms-Version:
       - "2019-12-12"
     status: 200 OK
@@ -257,7 +257,7 @@ interactions:
       - azsdk-go-generated/<version> azsdk-go-generated/<version> azcore/v0.16.2 (go1.15;
         Windows_NT)
       X-Ms-Date:
-      - Mon, 09 Aug 2021 07:17:43 GMT
+      - Tue, 10 Aug 2021 05:58:02 GMT
       X-Ms-Version:
       - "2019-12-12"
     url: https://azureblobstoragecanada.blob.core.windows.net/gocsetblobtagswithvid?restype=container
@@ -268,11 +268,11 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Mon, 09 Aug 2021 07:17:42 GMT
+      - Tue, 10 Aug 2021 05:58:01 GMT
       Server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 24113475-a01e-0029-3aee-8c40e3000000
+      - 9623789d-801e-0035-18ac-8d98f4000000
       X-Ms-Version:
       - "2019-12-12"
     status: 202 Accepted
