--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -37,7 +37,8 @@ steps:
           Write-Host "##[command]Executing go test -run "^Test" -v -coverprofile coverage.txt $td"
           go test -run "^Test" -v -coverprofile coverage.txt . > outfile.txt
           cat outfile.txt
-          cat outfile.txt | go-junit-report -set-exit-code > report.xml
+          if ($LASTEXITCODE) { exit $LASTEXITCODE }
+          cat outfile.txt | go-junit-report > report.xml
           # if no tests were actually run (e.g. examples) delete the coverage file so it's omitted from the coverage report
           if (Select-String -path ./report.xml -pattern '<testsuites></testsuites>' -simplematch -quiet) {
             Write-Host "##[command]Deleting empty coverage file"
