--- a/eng/pipelines/templates/steps/build-test.yml
+++ b/eng/pipelines/templates/steps/build-test.yml
@@ -34,7 +34,7 @@ steps:
         $testDirs = (./eng/scripts/get_test_dirs.ps1 -serviceDir $(SCOPE))
         foreach ($td in $testDirs) {
           pushd $td
-          Write-Host "##[command]Executing go test -run "^Test" -v -coverprofile coverage.txt $td"
+          Write-Host "##[command]Executing 'go test -run "^Test" -v -coverprofile coverage.txt .' in $td"
           go test -run "^Test" -v -coverprofile coverage.txt . | Tee-Object -FilePath outfile.txt
           if ($LASTEXITCODE) { exit $LASTEXITCODE }
           cat outfile.txt | go-junit-report > report.xml
