--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -8,8 +8,8 @@ pr:
   paths:
     include:
     - sdk/cosmos/
-
-stages:
-- template: /eng/pipelines/templates/jobs/archetype-sdk-client.yml
+    
+extends:
+  template: /eng/pipelines/templates/stages/cosmos-sdk-client.yml
   parameters:
     ServiceDirectory: 'cosmos'
