fix display name

--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -9,7 +9,7 @@ stages:
     - stage: Build
     jobs:
     - job: Test
-      displayName: Build and Test on
+      displayName: Download and run Cosmos Emulator
       - template: /eng/common/pipelines/templates/steps/cosmos-emulator.yml
         parameters:
           StartParameters: '/noexplorer /noui /enablepreview /disableratelimiting /enableaadauthentication /partitioncount=50 /consistency=Strong'
