--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -10,6 +10,17 @@ stages:
     - job: Test
       displayName: Download and run Cosmos Emulator
       
+      strategy:
+        matrix:
+          Windows_Go115:
+            pool.name: azsdk-pool-mms-win-2019-general
+            image.name: MMS2019
+            go.version: '1.15'
+          Windows_Go114:
+            pool.name: azsdk-pool-mms-win-2019-general
+            image.name: MMS2019
+            go.version: '1.14'
+      
       steps:
       - template: /eng/common/pipelines/templates/steps/cosmos-emulator.yml
         parameters:
@@ -32,10 +43,18 @@ stages:
         - template: ../variables/globals.yml
       strategy:
         matrix:
+          Linux_Go115:
+            pool.name: azsdk-pool-mms-ubuntu-2004-general
+            image.name: MMSUbuntu20.04
+            go.version: '1.15'
           Windows_Go115:
             pool.name: azsdk-pool-mms-win-2019-general
             image.name: MMS2019
             go.version: '1.15'
+          Linux_Go114:
+            pool.name: azsdk-pool-mms-ubuntu-2004-general
+            image.name: MMSUbuntu20.04
+            go.version: '1.14'
           Windows_Go114:
             pool.name: azsdk-pool-mms-win-2019-general
             image.name: MMS2019
