--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -20,6 +20,9 @@ stages:
             pool.name: azsdk-pool-mms-win-2019-general
             image.name: MMS2019
             go.version: '1.14'
+      pool:
+        name: $(pool.name)
+        vmImage: $(image.name)
       
       steps:
       - template: /eng/common/pipelines/templates/steps/cosmos-emulator.yml
