--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -7,7 +7,7 @@ stages:
   - stage: Emulator
     displayName: Cosmos Emulator
     jobs:
-    - job: Test
+    - job: DownloadAndRunCosmosEmulator
       displayName: Download and run Cosmos Emulator
       
       strategy:
@@ -37,6 +37,49 @@ stages:
           $cert.Import(".\CosmosDbEmulatorCert.pfx", $Key, "DefaultKeySet")
           $cert | Export-Certificate -FilePath "$env:temp\CosmosDbEmulatorCert.cer" -Type CERT
         displayName: 'Export Cosmos DB Emulator Certificate'
+        
+    - job: Test
+      displayName: Build and Test
+      
+      strategy:
+        matrix:
+          Windows_Go115:
+            pool.name: azsdk-pool-mms-win-2019-general
+            image.name: MMS2019
+            go.version: '1.15'
+          Windows_Go114:
+            pool.name: azsdk-pool-mms-win-2019-general
+            image.name: MMS2019
+            go.version: '1.14'
+      pool:
+        name: $(pool.name)
+        vmImage: $(image.name)
+      steps:
+      - template: /eng/common/pipelines/templates/steps/verify-agent-os.yml
+        parameters:
+          AgentImage: $(image.name)
+
+      - task: GoTool@0
+        inputs:
+          version: '$(go.version)'
+        displayName: "Select Go Version"
+
+      - template: ../steps/create-go-workspace.yml
+
+      - template: ../steps/set-scope.yml
+        parameters: 
+          ServiceDirectory: ${{ parameters.ServiceDirectory }}
+          GoWorkspace: $(GO_WORKSPACE_PATH)
+
+      - template: ../steps/build-test.yml
+        parameters: 
+          ServiceDirectory: ${{ parameters.ServiceDirectory }}
+          GoWorkspace: $(GO_WORKSPACE_PATH)
+          Scope: $(SCOPE)
+          Image: $(vm.image)
+          GoVersion: $(go.version)
+          Tags: 'emulator'
+      
         
   - stage: Build
     jobs:
